--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 </div>
                                 
                                 <div class="cta-container">
-                                    <a href="#" class="btn btn-primary" download><i class="fas fa-download"></i> Download CV</a>
+                                    <a href="Image/CV Resume.pdf" class="btn btn-primary" download><i class="fas fa-download"></i> Download CV</a>
                                     <a href="#contact" class="btn btn-secondary"><i class="fas fa-paper-plane"></i> Contact Me</a>
                                 </div>
                             </div>
