--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                     <div class="personal-summary">
                         <h3>Sujoy Kumar Saha</h3>
-                        <p class="tagline">Programmer & Photographer</p>
+                        <p class="tagline">Programmer</p>
                         <div class="about-social-links">
                             <a href="https://github.com/Sujoy2006" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://www.linkedin.com/in/sujoy-saha-7a33a7348" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -105,7 +105,7 @@
                         
                         <div class="tab-content">
                             <div class="tab-pane active" id="profile">
-                                <p>A BCA student at the Centre for Innovative Studies, North Bengal University. I’m passionate about solving complex problems with clean, efficient code and enjoy creating visually engaging digital experiences. I aim to blend logic and creativity to build solutions that are both functional and aesthetically refined.</p>
+                                <p>A BCA student at Centre for Innovative Studies, North Bengal University. I’m passionate about solving complex problems with clean, efficient code and enjoy creating visually engaging digital experiences. I aim to blend logic and creativity to build solutions that are both functional and aesthetically refined.</p>
                                 
                                 <div class="personal-info">
                                     <div class="info-column">
